--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "16.13.1",
     "react-i18next": "^11.12.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-calendars": "^1.1266.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
@@ -44,6 +45,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-calendars": "^1.1264.2",
     "jest-expo": "~41.0.0-beta.0",
     "typescript": "~4.0.0"
   },
